--- a/serverfolder/POS_Server/POS_Server.csproj
+++ b/serverfolder/POS_Server/POS_Server.csproj
@@ -271,14 +271,17 @@
     <Compile Include="Controllers\ActivateController.cs" />
     <Compile Include="Controllers\AgentController.cs" />
     <Compile Include="Controllers\BackupController.cs" />
-    <Compile Include="Controllers\ResidentialSectorsController.cs" />
     <Compile Include="Controllers\BranchesUsersController.cs" />
     <Compile Include="Controllers\AgentMembershipsController.cs" />
     <Compile Include="Controllers\BanksController.cs" />
     <Compile Include="Controllers\BondsController.cs" />
     <Compile Include="Controllers\BranchesController.cs" />
     <Compile Include="Controllers\BranchStoreController.cs" />
+    <Compile Include="Controllers\dishIngredientsController.cs" />
+    <Compile Include="Controllers\menuSettingsController.cs" />
     <Compile Include="Controllers\ProgramDetailsController.cs" />
+    <Compile Include="Controllers\ResidentialSectorsController.cs" />
+    <Compile Include="Controllers\TablesController.cs" />
     <Compile Include="Controllers\TagsController.cs" />
     <Compile Include="Controllers\CashTransferController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
@@ -423,7 +426,6 @@
     </Compile>
     <Compile Include="Models\ActivateModel.cs" />
     <Compile Include="Models\BackupModel.cs" />
-    <Compile Include="Models\ResidentialSectorsModel.cs" />
     <Compile Include="Models\BranchesUsersModel.cs" />
     <Compile Include="Models\AgentMembershipsModel.cs" />
     <Compile Include="Models\AgentModel.cs" />
@@ -431,7 +433,10 @@
     <Compile Include="Models\BondsModel.cs" />
     <Compile Include="Models\BranchModel.cs" />
     <Compile Include="Models\BranchStoreModel.cs" />
+    <Compile Include="Models\MenuSettingModel.cs" />
     <Compile Include="Models\ProgramDetailsModel.cs" />
+    <Compile Include="Models\ResidentialSectorsModel.cs" />
+    <Compile Include="Models\TableModel.cs" />
     <Compile Include="Models\TagsModel.cs" />
     <Compile Include="Models\CashTransferModel.cs" />
     <Compile Include="Models\CategoryModel.cs" />
@@ -571,6 +576,9 @@
       <DependentUpon>PosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="subscriptionFees.cs">
+      <DependentUpon>PosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
       <DependentUpon>PosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="sysEmails.cs">
