--- a/serverfolder/POS_Server/POS_Server.csproj
+++ b/serverfolder/POS_Server/POS_Server.csproj
@@ -280,6 +280,7 @@
     <Compile Include="Controllers\BranchStoreController.cs" />
     <Compile Include="Controllers\dishIngredientsController.cs" />
     <Compile Include="Controllers\couponsMembershipsController.cs" />
+    <Compile Include="Controllers\HallSectionController.cs" />
     <Compile Include="Controllers\membershipsOffersController.cs" />
     <Compile Include="Controllers\invoicesClassMembershipsController.cs" />
     <Compile Include="Controllers\subscriptionFeesController.cs" />
@@ -454,6 +455,7 @@
     <Compile Include="Models\BondsModel.cs" />
     <Compile Include="Models\BranchModel.cs" />
     <Compile Include="Models\BranchStoreModel.cs" />
+    <Compile Include="Models\HallSectionModel.cs" />
     <Compile Include="Models\subscriptionFeesModel.cs" />
     <Compile Include="Models\invoicesClassModel.cs" />
     <Compile Include="Models\MenuSettingModel.cs" />
