--- a/serverfolder/POS_Server/POS_Server.csproj
+++ b/serverfolder/POS_Server/POS_Server.csproj
@@ -283,6 +283,7 @@
     <Compile Include="Controllers\HallSectionController.cs" />
     <Compile Include="Controllers\membershipsOffersController.cs" />
     <Compile Include="Controllers\invoicesClassMembershipsController.cs" />
+    <Compile Include="Controllers\OrderPreparingController.cs" />
     <Compile Include="Controllers\subscriptionFeesController.cs" />
     <Compile Include="Controllers\invoicesClassController.cs" />
     <Compile Include="Controllers\menuSettingsController.cs" />
@@ -400,6 +401,9 @@
     <Compile Include="invoiceTables.cs">
       <DependentUpon>PosModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="itemOrderPreparing.cs">
+      <DependentUpon>PosModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="items.cs">
       <DependentUpon>PosModel.tt</DependentUpon>
     </Compile>
@@ -457,6 +461,7 @@
     <Compile Include="Models\BranchModel.cs" />
     <Compile Include="Models\BranchStoreModel.cs" />
     <Compile Include="Models\HallSectionModel.cs" />
+    <Compile Include="Models\OrderPreparingModel.cs" />
     <Compile Include="Models\subscriptionFeesModel.cs" />
     <Compile Include="Models\invoicesClassModel.cs" />
     <Compile Include="Models\MenuSettingModel.cs" />
@@ -524,6 +529,12 @@
       <DependentUpon>PosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="offers.cs">
+      <DependentUpon>PosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="orderPreparing.cs">
+      <DependentUpon>PosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="orderPreparingStatus.cs">
       <DependentUpon>PosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="packages.cs">
