--- a/serverfolder/POS_Server/POS_Server.csproj
+++ b/serverfolder/POS_Server/POS_Server.csproj
@@ -470,6 +470,7 @@
     <Compile Include="Models\ReservationModel.cs" />
     <Compile Include="Models\ResidentialSectorsModel.cs" />
     <Compile Include="Models\TableModel.cs" />
+    <Compile Include="Models\TablesStatisticsModel.cs" />
     <Compile Include="Models\TagsModel.cs" />
     <Compile Include="Models\CashTransferModel.cs" />
     <Compile Include="Models\CategoryModel.cs" />
